k8s/db1_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db1-deployment
  labels:
    app: db1
spec:
  replicas: 1   # DONT FORGET TO DECREASE IT!!!
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
     labels:
       app: db1
    spec:
      containers:
        - name: db1
          # image: db1-image
          image: sosnoviybor/microsevices-db1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
