k8s/db1_service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db1
  annotations:
    kubernetes.io/ingress.class: "db1"
spec:
  rules:
    - http:
        paths:
          - path: /db1
            pathType: "Prefix"
            backend:
              service:
                name: db1-service
                port:
                  number: 8080
