k8s/db1_service/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: db1-virtual
spec:
  hosts:
    - db1-service
  http:
    - route:
        - destination:
            host: db1-service
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
